# FLOPA

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/notes/: notes_from_baraE.md
notebooks/: image_reconstruction_bi-directional_scan.ipynb  image_reconstruction_multiple_sequences.ipynb  image_reconstruction_testing.ipynb  image_reconstruction_with_masking.ipynb  image_smoothing.ipynb  masking_flim_from_phasor.ipynb  phasor_calibration.ipynb
scripts/: dp_napari_flim_image.py  dp_run_analysis.py  launch_napari.py  run_analysis.py  temp.py  temp_flim_widget.py
src/flopa/: launch_napari.py
src/flopa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flopa/io/: loader.py
src/flopa/io/ptuio/: reader.py  reconstructor.py  utils.py
src/flopa/processing/: decay.py  flim_image.py  logger.py  phasor.py  reconstruction.py
src/flopa/widgets/: calibration_dialog.py  decay_panel.py  flim_view_panel.py  histogram_slider.py  load_view_panel.py  napari_flim_widget.py  phasor_panel.py  ptu_processing_panel.py
src/flopa/widgets/utils/: bidir_shift_plot.py  exporter.py  legend_checkbox.py  style.py  threading.py
tests/: test_napari.py
