[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flopa"
version = "0.1.0"
description = "tool for FLIM (TCSPC) data analysis"
authors = [
  { name="Zuzana Cockova", email="cockovaz@natur.cuni.cz" },
  { name = "Dalibor Panek", email = "panekdal@natur.cuni.cz" },
]
dependencies = [
    "numpy",
    "xarray",
    "napari[all]",
    "qtpy",
    "h5netcdf",
    "tifffile",
    "matplotlib",
    "scipy",
    "superqt"
]

[tool.setuptools.packages.find]
where = ["src"]
